Fixed project mockup overflow issue

--- a/src/templates/project.scss
+++ b/src/templates/project.scss
@@ -46,7 +46,8 @@
       padding: 2.4% 2.35% 0 2.41%;
 
       &-inner {
-        aspect-ratio: 16 / 9;
+        //aspect-ratio: 16 / 9;
+        padding-bottom: 56.25%;
         overflow: hidden;
         border-radius: 1px;
         position: relative;
@@ -54,6 +55,10 @@
     }
 
     &-image {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
       display: block;
       animation-name: scroll;
       animation-duration: 18s;
@@ -65,6 +70,7 @@
     &-video {
       width: 100%;
       height: 100%;
+      position: absolute;
 
       iframe {
         position: absolute;
